docs: changed line

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Amish's site</title>
 </head>
 <body>
-    Hi, I am Amish
+    Hi, I am Amish.<br>
     I am a computer science student.
 </body>
 </html>
