docs: updated index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     Hi, I am Amish.<br>
-    I am a computer science student.
+    I am a computer science student.<br>
+    I am currently studying at Rewa Engineering college.
 </body>
 </html>
