docs: added hobbies

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     Hi, I am Amish.<br>
     I am a computer science student.<br>
-    I am currently studying at Rewa Engineering college.
+    I am currently studying at Rewa Engineering college.<br>
+    My hobbies are playing chess and listening music.
 </body>
 </html>
