docs: second branch hobbies

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     Hi, I am Amish.<br>
     I am a computer science student.<br>
     I am currently studying at Rewa Engineering college.<br>
-    My hobbies are playing chess, listening music.
+    My hobbies are playing chess, listening music and watching movies.
 </body>
 </html>
